<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <!--
    広告枠1
    -->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:background="@color/Black"

        />

        <!--
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
    </FrameLayout>
    -->
    <!--
      広告枠2
      <com.ad_stir.webview.AdstirMraidView
    media="メディアID"
    spot="枠No"
    adsize="320,50"
    refresh_interval="広告リフレッシュ秒[整数]"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
      -->
    <!--
    <Space android:layout_width="match_parent"
        android:layout_height="120dip"/>
        -->
    <TextView
        android:id="@+id/view_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:autoText="true"
        android:background="@color/White"
        android:lines="9"
        android:maxLines="9"
        android:text="@string/TopMessage"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
          android:autoSizePresetSizes="@array/autosize_text_sizes"
          -->
    <TableLayout
        android:id="@+id/Screen_Color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        >


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_7"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:id="@+id/button_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_8"
                android:layout_weight="1"
                android:textColor="@color/Black"


                >
            </Button>
            <Button
                android:id="@+id/button_9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_9"
                android:layout_weight="1"
                android:textColor="@color/Black"
                >
            </Button>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:layout_weight="1"
                android:text="@string/Button_4"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:id="@+id/button_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_5"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:id="@+id/button_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_6"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_1"
                android:id="@+id/button_1"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_2"
                android:id="@+id/button_2"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:id="@+id/button_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_3"
                android:layout_weight="1"
                android:textColor="@color/Black"


                >
            </Button>
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_Clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_x="107px"
                android:layout_y="200px"
                android:text="@string/Button_Clear"
                android:layout_weight="1"
                android:textColor="@color/Red"

                >
            </Button>
            <Button
                android:id="@+id/button_0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:text="@string/Button_0"
                android:layout_weight="1"
                android:textColor="@color/Black"

                >
            </Button>
            <Button
                android:id="@+id/button_EXE"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/Red"
                android:text="@string/Button_EXE"
                android:layout_weight="1"

                >
            </Button>
        </TableRow>

    </TableLayout>
</LinearLayout>